--- a/index.html
+++ b/index.html
@@ -271,15 +271,13 @@
                     <h2>Mailing Address</h2>
                     <ul class="list-unstyled">
                         <li>
-                            <a href="#">
-                                <i class="fas fa-map-marker-alt"></i> 
-                                📍 842 Maplewood Drive, Springfield, IL 62704, USA
+                            <a href="tel:+18339403283">
+                               +1-833-940-3283
                             </a>
                         </li>
                         <li>
-                            <a href="mailto:info@hostiko.com">
-                                <i class="fas fa-envelope"></i> 
-                                📧 coretechhosting@gmail.com
+                            <a href="tel:+611800929155">
+                               +61-1800-929-155
                             </a>
                         </li>
                     </ul>
