--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                     </form>
                 </div>
                 <div class="contact-text-con">
-                    <h2>Mailing Address</h2>
+                    <h2>Contact Info</h2>
                     <ul class="list-unstyled">
                         <li>
                             <a href="tel:+18339403283">
